--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -105,10 +105,10 @@ jobs:
         run: bash ./scripts/build_app.sh -p -r ${{ github.job }} -n ${{ matrix.node }} -d ${{ matrix.debian }}
 
   build_pdfme:
-    name: Build docs
+    name: Build pdfme
     if: ${{
       github.event_name == 'workflow_dispatch' && inputs.build_pdfme ||
-      github.event_name == 'push' && contains(github.event.head_commit.message, 'doc')
+      github.event_name == 'push' && !contains(github.event.head_commit.message, 'skip build pdfme')
       }}
     runs-on: ubuntu-22.04
     steps:
