--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kalisio-print",
+  "name": "print",
   "description": "Kalisio print Application",
   "version": "1.0.0",
   "homepage": "https://github.com/kalisio/print",
